tiny fix to abstract of paper.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -81,10 +81,10 @@ Adelaide SA 5005 Australia}
 TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
    
   \begin{abstract}
-   Here we introduce \fs, a MATHEMATICA package which generates a C++
+   We introduce \fs, a MATHEMATICA package which generates a C++
    spectrum generator for any SUSY model, created with modularity and
    speed in mind.  \fs makes use of the existing \sarah package
-   to obtain self energies, tadpoles corrections and renormalisation
+   to obtain self energies, tadpole corrections and renormalisation
    group equations in any model.  \fs then generates C++ code for
    calculating spectra with a structure that is designed to be
    flexible. The user specifies the model supplying the
