removed red comment in abstract.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -90,9 +90,7 @@ TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
    flexible. The user specifies the model supplying the
    superpotential, gauge structure and particle content in a \sarah
    model file. The user should also specify the boundary conditions in
-   a separate \fs model file. {\color{red}( Do we want to keep this
-     separate and in different places, add a script to put a \sarah
-     model file in the right place or combine them?)}  Flexible SUSY
+   a separate \fs model file.  Flexible SUSY
    then translates these into C++ code along with numerical routines
    for solving the renormalisation group equations, one loop
    electroweak symmetry breaking conditions and a solver routine for
