Added some basic references to introduction.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -134,20 +134,25 @@ Higgs
          to overcome restrictions in scope is quite straight forward.
 
 
+
+
 \newpage
 \section{Introduction}
-Supersymmetry provides the only way to extend the space-time
-symmetries of the poincar\'e group\cite{}, leading many to suspect
-that it may be realised in nature in some form. In particular
-supersymmetric extensions of the standard model where supersymmetry is
-broken at the TeV scale have been proposed to solve the hierarchy
-problem\cite{}, allow gauge coupling unification\cite{} and predict a
-dark matter candidate\cite{} and can fit the observed relic
-density\cite{}.  Such models have also been used for
-baryogenesis\cite{} or leptogensis\cite{} to solve the
-matter-anti-matter asymmetry of the universe and have been considered
-as the low energy effective models originating from string
-theory\cite{}.
+Supersymmetry provides the only non-trivial way to extend the
+space-time symmetries of the poincar\'e
+group\cite{Coleman:1967ad,Haag:1974qh}, leading many to suspect that it
+may be realised in nature in some form. In particular supersymmetric
+extensions of the standard model where supersymmetry is broken at the
+TeV scale have been proposed to solve the hierarchy
+problem\cite{Weinberg:1975gm, Weinberg:1979bn, Gildener:1976ai,
+  Susskind:1978ms, 'tHooft:1980xb}, allow gauge coupling
+unification\cite{Langacker:1990jh, Ellis:1990wk, Amaldi:1991cn,
+  Langacker:1991an, Giunti:1991ta} and predict a dark matter
+candidate\cite{} and can fit the observed relic density\cite{}.  Such
+models have also been used for baryogenesis\cite{} or
+leptogensis\cite{} to solve the matter-anti-matter asymmetry of the
+universe and have been considered as the low energy effective models
+originating from string theory\cite{}.
 
 Detailed phenonenological studies have been carried out for scenarios
 with the minimal supersymmetric standard model (MSSM). Many
@@ -1797,6 +1802,106 @@ Comparisons against existing spectrum generators to test for deviations, e.g. th
 Comparisons against existing spectrum generators and SARAH generated spheno code for speed.
 
 \begin{thebibliography}{100}
+%% %\cite{Nilles:1983ge}
+%% \bibitem{Nilles:1983ge} 
+%%   H.~P.~Nilles,
+%%   %``Supersymmetry, Supergravity and Particle Physics,''
+%%   Phys.\ Rept.\  {\bf 110}, 1 (1984).
+%%   %%CITATION = PRPLC,110,1;%%
+%%   %4282 citations counted in INSPIRE as of 24 Apr 2014
+%% %\cite{Lahanas:1986uc}
+%% \bibitem{Lahanas:1986uc} 
+%%   A.~B.~Lahanas and D.~V.~Nanopoulos,
+%%   %``The Road to No Scale Supergravity,''
+%%   Phys.\ Rept.\  {\bf 145}, 1 (1987).
+%%   %%CITATION = PRPLC,145,1;%%
+%%   %694 citations counted in INSPIRE as of 24 Apr 2014
+%% %\cite{Ellis:1990wk}
+%\cite{Coleman:1967ad}
+
+%\cite{Weinberg:1975gm}
+\bibitem{Weinberg:1975gm} 
+  S.~Weinberg,
+  %``Implications of Dynamical Symmetry Breaking,''
+  Phys.\ Rev.\ D {\bf 13}, 974 (1976).
+  %%CITATION = PHRVA,D13,974;%%
+  %1251 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Weinberg:1979bn}
+\bibitem{Weinberg:1979bn}
+  S.~Weinberg,
+  %``Implications of Dynamical Symmetry Breaking: An Addendum,''
+  Phys.\ Rev.\ D {\bf 19} (1979) 1277.
+  %%CITATION = PHRVA,D19,1277;%%
+  %1586 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Gildener:1976ai}
+\bibitem{Gildener:1976ai} 
+  E.~Gildener,
+  %``Gauge Symmetry Hierarchies,''
+  Phys.\ Rev.\ D {\bf 14}, 1667 (1976).
+  %%CITATION = PHRVA,D14,1667;%%
+  %480 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Susskind:1978ms}
+\bibitem{Susskind:1978ms}
+  L.~Susskind,
+  %``Dynamics of Spontaneous Symmetry Breaking in the Weinberg-Salam Theory,''
+  Phys.\ Rev.\ D {\bf 20} (1979) 2619.
+  %%CITATION = PHRVA,D20,2619;%%
+  %2011 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{'tHooft:1980xb}
+\bibitem{'tHooft:1980xb} 
+  G.~'t Hooft, C.~Itzykson, A.~Jaffe, H.~Lehmann, P.~K.~Mitter, I.~M.~Singer and R.~Stora,
+  %``Recent Developments in Gauge Theories. Proceedings, Nato Advanced Study Institute, Cargese, France, August 26 - September 8, 1979,''
+  NATO Adv.\ Study Inst.\ Ser.\ B Phys.\  {\bf 59}, pp.1 (1980).
+  %%CITATION = NASBD,59,pp.1;%%
+  %10 citations counted in INSPIRE as of 24 Apr 2014
+\bibitem{Coleman:1967ad} 
+  S.~R.~Coleman and J.~Mandula,
+  %``All Possible Symmetries of the S Matrix,''
+  Phys.\ Rev.\  {\bf 159}, 1251 (1967).
+  %%CITATION = PHRVA,159,1251;%%
+  %722 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Haag:1974qh}
+\bibitem{Haag:1974qh} 
+  R.~Haag, J.~T.~Lopuszanski and M.~Sohnius,
+  %``All Possible Generators of Supersymmetries of the s Matrix,''
+  Nucl.\ Phys.\ B {\bf 88}, 257 (1975).
+  %%CITATION = NUPHA,B88,257;%%
+  %828 citations counted in INSPIRE as of 24 Apr 2014
+
+\bibitem{Ellis:1990wk} 
+  J.~R.~Ellis, S.~Kelley and D.~V.~Nanopoulos,
+  %``Probing the desert using gauge coupling unification,''
+  Phys.\ Lett.\ B {\bf 260}, 131 (1991).
+  %%CITATION = PHLTA,B260,131;%%
+  %862 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Amaldi:1991cn}
+\bibitem{Amaldi:1991cn} 
+  U.~Amaldi, W.~de Boer and H.~Furstenau,
+  %``Comparison of grand unified theories with electroweak and strong coupling constants measured at LEP,''
+  Phys.\ Lett.\ B {\bf 260}, 447 (1991).
+  %%CITATION = PHLTA,B260,447;%%
+  %1525 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Langacker:1991an}
+\bibitem{Langacker:1991an} 
+  P.~Langacker and M.~-x.~Luo,
+  %``Implications of precision electroweak experiments for $M_t$, $\rho_{0}$, $\sin^2\theta_W$ and grand unification,''
+  Phys.\ Rev.\ D {\bf 44}, 817 (1991).
+  %%CITATION = PHRVA,D44,817;%%
+  %1219 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Giunti:1991ta}
+\bibitem{Giunti:1991ta} 
+  C.~Giunti, C.~W.~Kim and U.~W.~Lee,
+  %``Running coupling constants and grand unification models,''
+  Mod.\ Phys.\ Lett.\ A {\bf 6}, 1745 (1991).
+  %%CITATION = MPLAE,A6,1745;%%
+  %273 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Langacker:1990jh}
+\bibitem{Langacker:1990jh} 
+  P.~Langacker,
+  %``Precision tests of the standard model,''
+  In *Boston 1990, Proceedings, Particles, strings and cosmology* 237-269 and Pennsylvania Univ. Philadelphia - UPR-0435T (90,rec.Oct.) 33 p. (015721) (see HIGH ENERGY PHYSICS INDEX 29 (1991) No. 9950)
+  %4 citations counted in INSPIRE as of 24 Apr 2014
+
 %\cite{Girardello:1981wz}
 \bibitem{Girardello:1981wz}
   L.~Girardello and M.~T.~Grisaru,
