Added more refernces and fixed typos in introduction. many more to do.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -136,29 +136,31 @@ Higgs
 
 
 
+
 \newpage
 \section{Introduction}
-Supersymmetry provides the only non-trivial way to extend the
+Supersymmetry(SUSY) provides the only non-trivial way to extend the
 space-time symmetries of the poincar\'e
-group\cite{Coleman:1967ad,Haag:1974qh}, leading many to suspect that it
-may be realised in nature in some form. In particular supersymmetric
-extensions of the standard model where supersymmetry is broken at the
-TeV scale have been proposed to solve the hierarchy
+group\cite{Coleman:1967ad,Haag:1974qh}, leading many to suspect that
+SUSY may be realised in nature in some form. In particular
+supersymmetric extensions of the standard model where SUSY is broken
+at the TeV scale have been proposed to solve the hierarchy
 problem\cite{Weinberg:1975gm, Weinberg:1979bn, Gildener:1976ai,
   Susskind:1978ms, 'tHooft:1980xb}, allow gauge coupling
 unification\cite{Langacker:1990jh, Ellis:1990wk, Amaldi:1991cn,
-  Langacker:1991an, Giunti:1991ta} and predict a dark matter
-candidate\cite{} and can fit the observed relic density\cite{}.  Such
-models have also been used for baryogenesis\cite{} or
-leptogensis\cite{} to solve the matter-anti-matter asymmetry of the
-universe and have been considered as the low energy effective models
-originating from string theory\cite{}.
+  Langacker:1991an, Giunti:1991ta} and predict a dark matter candidate
+which can fit the observed relic
+density\cite{Goldberg:1983nd,Ellis:1983ew}.  Such models have also
+been used for baryogenesis\cite{} or leptogensis\cite{} to solve the
+matter-anti-matter asymmetry of the universe and have been considered
+as the low energy effective models originating from string
+theory\cite{}.
 
 Detailed phenonenological studies have been carried out for scenarios
 with the minimal supersymmetric standard model (MSSM). Many
 computational tools have been created to aid these studies and to
 explore the model. In particular there are a number of public spectrum
-generators for MSSM\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae} and two for the NMSSM\cite{Ellwanger:2006rn,Allanach:nmssm} which allow
+generators for MSSM\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae} and two for the NMSSM\cite{Ellwanger:2006rn,Allanach:2013kza} which allow
 one to find the sparticle spectrum and mixings for a particular
 choices of breaking mechanism inspired boundary conditions and
 specified parameters.
@@ -1818,7 +1820,19 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
 %%   %694 citations counted in INSPIRE as of 24 Apr 2014
 %% %\cite{Ellis:1990wk}
 %\cite{Coleman:1967ad}
-
+\bibitem{Coleman:1967ad} 
+  S.~R.~Coleman and J.~Mandula,
+  %``All Possible Symmetries of the S Matrix,''
+  Phys.\ Rev.\  {\bf 159}, 1251 (1967).
+  %%CITATION = PHRVA,159,1251;%%
+  %722 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Haag:1974qh}
+\bibitem{Haag:1974qh} 
+  R.~Haag, J.~T.~Lopuszanski and M.~Sohnius,
+  %``All Possible Generators of Supersymmetries of the s Matrix,''
+  Nucl.\ Phys.\ B {\bf 88}, 257 (1975).
+  %%CITATION = NUPHA,B88,257;%%
+  %828 citations counted in INSPIRE as of 24 Apr 2014
 %\cite{Weinberg:1975gm}
 \bibitem{Weinberg:1975gm} 
   S.~Weinberg,
@@ -1854,19 +1868,12 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   NATO Adv.\ Study Inst.\ Ser.\ B Phys.\  {\bf 59}, pp.1 (1980).
   %%CITATION = NASBD,59,pp.1;%%
   %10 citations counted in INSPIRE as of 24 Apr 2014
-\bibitem{Coleman:1967ad} 
-  S.~R.~Coleman and J.~Mandula,
-  %``All Possible Symmetries of the S Matrix,''
-  Phys.\ Rev.\  {\bf 159}, 1251 (1967).
-  %%CITATION = PHRVA,159,1251;%%
-  %722 citations counted in INSPIRE as of 24 Apr 2014
-%\cite{Haag:1974qh}
-\bibitem{Haag:1974qh} 
-  R.~Haag, J.~T.~Lopuszanski and M.~Sohnius,
-  %``All Possible Generators of Supersymmetries of the s Matrix,''
-  Nucl.\ Phys.\ B {\bf 88}, 257 (1975).
-  %%CITATION = NUPHA,B88,257;%%
-  %828 citations counted in INSPIRE as of 24 Apr 2014
+
+\bibitem{Langacker:1990jh} 
+  P.~Langacker,
+  %``Precision tests of the standard model,''
+  In *Boston 1990, Proceedings, Particles, strings and cosmology* 237-269 and Pennsylvania Univ. Philadelphia - UPR-0435T (90,rec.Oct.) 33 p. (015721) (see HIGH ENERGY PHYSICS INDEX 29 (1991) No. 9950)
+  %4 citations counted in INSPIRE as of 24 Apr 2014
 
 \bibitem{Ellis:1990wk} 
   J.~R.~Ellis, S.~Kelley and D.~V.~Nanopoulos,
@@ -1896,11 +1903,23 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   %%CITATION = MPLAE,A6,1745;%%
   %273 citations counted in INSPIRE as of 24 Apr 2014
 %\cite{Langacker:1990jh}
-\bibitem{Langacker:1990jh} 
-  P.~Langacker,
-  %``Precision tests of the standard model,''
-  In *Boston 1990, Proceedings, Particles, strings and cosmology* 237-269 and Pennsylvania Univ. Philadelphia - UPR-0435T (90,rec.Oct.) 33 p. (015721) (see HIGH ENERGY PHYSICS INDEX 29 (1991) No. 9950)
-  %4 citations counted in INSPIRE as of 24 Apr 2014
+
+
+%\cite{Goldberg:1983nd}
+\bibitem{Goldberg:1983nd} 
+  H.~Goldberg,
+  %``Constraint on the Photino Mass from Cosmology,''
+  Phys.\ Rev.\ Lett.\  {\bf 50}, 1419 (1983)
+  [Erratum-ibid.\  {\bf 103}, 099905 (2009)].
+  %%CITATION = PRLTA,50,1419;%%
+  %972 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Ellis:1983ew}
+\bibitem{Ellis:1983ew} 
+  J.~R.~Ellis, J.~S.~Hagelin, D.~V.~Nanopoulos, K.~A.~Olive and M.~Srednicki,
+  %``Supersymmetric Relics from the Big Bang,''
+  Nucl.\ Phys.\ B {\bf 238}, 453 (1984).
+  %%CITATION = NUPHA,B238,453;%%
+  %1282 citations counted in INSPIRE as of 24 Apr 2014
 
 %\cite{Girardello:1981wz}
 \bibitem{Girardello:1981wz}
@@ -1951,7 +1970,13 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   [hep-ph/0612134].
   %%CITATION = HEP-PH/0612134;%%
   %81 citations counted in INSPIRE as of 03 Nov 2013
-
+%\cite{Allanach:2013kza}
+\bibitem{Allanach:2013kza} 
+  B.~C.~Allanach, P.~Athron, L.~C.~Tunstall, A.~Voigt and A.~G.~Williams,
+  %``Next-to-Minimal SOFTSUSY,''
+  arXiv:1311.7659 [hep-ph].
+  %%CITATION = ARXIV:1311.7659;%%
+  %1 citations counted in INSPIRE as of 24 Apr 2014
   %\cite{Staub:2010ty}
 \bibitem{Staub:2010ty} 
   F.~Staub, W.~Porod and B.~Herrmann,
