--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -151,36 +151,41 @@ unification\cite{Langacker:1990jh, Ellis:1990wk, Amaldi:1991cn,
   Langacker:1991an, Giunti:1991ta} and predict a dark matter candidate
 which can fit the observed relic
 density\cite{Goldberg:1983nd,Ellis:1983ew}.  Such models have also
-been used for baryogenesis\cite{} or leptogensis\cite{} to solve the
+been used for baryogenesis or leptogensis to solve the
 matter-anti-matter asymmetry of the universe and have been considered
 as the low energy effective models originating from string
-theory\cite{}.
+theory.
 
 Detailed phenonenological studies have been carried out for scenarios
-with the minimal supersymmetric standard model (MSSM). Many
-computational tools have been created to aid these studies and to
-explore the model. In particular there are a number of public spectrum
-generators for MSSM\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae} and two for the NMSSM\cite{Ellwanger:2006rn,Allanach:2013kza} which allow
-one to find the sparticle spectrum and mixings for a particular
-choices of breaking mechanism inspired boundary conditions and
-specified parameters.
+within the minimal supersymmetric standard model (MSSM).  Such work
+has been greatly aided by public spectrum generators for
+MSSM\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae},
+allowing fast and reliable exploration of the sparticle spectrum and
+mixings that can be obtained from particular choices of breaking
+mechanism inspired boundary conditions and specified parameters. There
+are also two public spectrum generators
+\cite{Ellwanger:2006rn,Allanach:2013kza} for the next to minimal
+supersymmetric standard model (NMSSM) \cite{NMSSM} .
 
-However none of the fundamental motivations of supersymmetry require
-minimality. Yet without minimality as a constraint, constructing
-specialised tools to study all relevant models would require an
-enormous amount of work.  So general tools which can automate this
-process and produce fats and reliable programs can greatly enhance our
-ability to understand and test non-minimal realisations of
-supersymmetry.
+None of the fundamental motivations of supersymmetry require
+minimality, and specific altternatives to (or extensions of) the MSSM
+are motiovated by, for example,the $\mu-problem$ of the
+MSSM\cite{Kim:1983dt}, explaining the family structure (see e.g,
+\cite{King:2014nza}) or for successful baryogensis or leptogenesis
+(see e.g,\cite{King:2008qb}). However constructing specialised tools
+to study all relevant models would require an enormous amount of work.
+So general tools which can automate this process and produce fast and
+reliable programs can greatly enhance our ability to understand and
+test non-minimal realisations of supersymmetry.
 
-From the recent $7$ TeV and $8$ TeV runs at the Large Hadron Collider
-(LHC) there have been two important developments.  First low energy
-signatures expected from such models, such as the classic jets plus
-missing transverse energy signature, have not been observed,
-substantially raising the lower limit on sparticle masses\cite{}. No
-other signature of beyond the standard model(BSM) physics has been
-observed, leaving the fundamental questions which motivated BSM
-physics unanswered.
+  For instance from the recent $7$ TeV and $8$ TeV runs
+at the Large Hadron Collider (LHC) there have been two important
+developments.  First low energy signatures expected from such models,
+such as the classic jets plus missing transverse energy signature,
+have not been observed, substantially raising the lower limit on
+sparticle masses\cite{}. No other signature of beyond the standard
+model(BSM) physics has been observed, leaving the fundamental
+questions which motivated BSM physics unanswered.
 
  Secondly ATLAS and CMS discovered\cite{} a light Higgs of $125$ GeV,
  within the mass range that could be accommodated in the MSSM but
@@ -196,10 +201,11 @@ These results lead to a number of different perspectives, for example
 some may wish to abandon naturalness as a motivation and focus on BSM
 models which can fit the observed relic density and allow unification
 of gauge couplings, while others may focus on special models which
-preserve naturalness.  In both cases exploration of the models can be
-aided if it is possible to quickly create a spectrum generator to find
-if there are phenomenologically viable scenarios in the models they
-are interested and what the general features of such models are.
+preserve naturalness.  In both cases exploration of such models can be
+aided if it is possible to quickly create a fast spectrum generator.
+
+
+
 
 \subsection{The Program}
 \fs is a MATHEMATICA package designed to create a fast and easily
@@ -1978,6 +1984,44 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   %%CITATION = ARXIV:1311.7659;%%
   %1 citations counted in INSPIRE as of 24 Apr 2014
   %\cite{Staub:2010ty}
+\bibitem{NMSSM} P. Fayet, Nucl. Phys. B \textbf{90} (1975) 104; Phys. Lett.
+B \textbf{64} (1976) 159; Phys. Lett. B \textbf{69} (1977) 489 and Phys. Lett. B
+\textbf{84} (1979) 416; H.P. Nilles, M. Srednicki and D. Wyler, Phys. Lett. B
+\textbf{120} (1983) 346; J.M. Frere, D.R. Jones and S. Raby, Nucl. Phys. B
+\textbf{222} (1983) 11; J.P. Derendinger and C.A. Savoy, Nucl. Phys. B
+\textbf{237} (1984) 307;  A.I. Veselov, M.I. Vysotsky and K.A. Ter-Martirosian,
+Sov. Phys. JETP \textbf{63} (1986) 489; J.R. Ellis, J.F. Gunion, H.E. Haber, L.
+Roszkowski and F. Zwirner, Phys. Rev. D \textbf{39}  (1989) 844; M. Drees, Int.
+J. Mod. Phys. A \textbf{4}  (1989) 3635; U. Ellwanger, M. Rausch de
+Traubenberg and C.A. Savoy, Phys. 
+Lett. B \textbf{315} (1993) 331, Z. Phys. C {\bf 67} (1995) 665 and Nucl. Phys.
+B \textbf{492} (1997) 307; U.~Ellwanger, Phys.\ Lett.\  B {\bf 303} (1993) 271; P.
+Pandita, Z. Phys. C \textbf{59} (1993) 575; T. Elliott, S.F. King and P.L.
+White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
+\textbf{52} (1995) 4183;  F.~Franke and H.~Fraas, Int.\ J.\ Mod.\ Phys.\  A {\bf
+12} (1997) 479.   D.~J.~Miller, R.~Nevzorov and P.~M.~Zerwas,  Nucl.\ Phys.\ B {\bf 681}, 3 (2004) [hep-ph/0304049].
+%\cite{Kim:1983dt}
+\bibitem{Kim:1983dt} 
+  J.~E.~Kim and H.~P.~Nilles,
+  %``The mu Problem and the Strong CP Problem,''
+  Phys.\ Lett.\ B {\bf 138}, 150 (1984).
+  %%CITATION = PHLTA,B138,150;%%
+  %604 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{King:2014nza}
+\bibitem{King:2014nza} 
+  S.~F.~King, A.~Merle, S.~Morisi, Y.~Shimizu and M.~Tanimoto,
+  %``Neutrino Mass and Mixing: from Theory to Experiment,''
+  arXiv:1402.4271 [hep-ph].
+  %%CITATION = ARXIV:1402.4271;%%
+  %9 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{King:2008qb}
+\bibitem{King:2008qb} 
+  S.~F.~King, R.~Luo, D.~J.~Miller and R.~Nevzorov,
+  %``Leptogenesis in the Exceptional Supersymmetric Standard Model: Flavour dependent lepton asymmetries,''
+  JHEP {\bf 0812}, 042 (2008)
+  [arXiv:0806.0330 [hep-ph]].
+  %%CITATION = ARXIV:0806.0330;%%
+  %26 citations counted in INSPIRE as of 24 Apr 2014
 \bibitem{Staub:2010ty} 
   F.~Staub, W.~Porod and B.~Herrmann,
   %``The Electroweak sector of the NMSSM at the one-loop level,''
