--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -178,36 +178,48 @@ So general tools which can automate this process and produce fast and
 reliable programs can greatly enhance our ability to understand and
 test non-minimal realisations of supersymmetry.
 
-  For instance from the recent $7$ TeV and $8$ TeV runs
-at the Large Hadron Collider (LHC) there have been two important
-developments.  First low energy signatures expected from such models,
-such as the classic jets plus missing transverse energy signature,
-have not been observed, substantially raising the lower limit on
-sparticle masses\cite{}. No other signature of beyond the standard
-model(BSM) physics has been observed, leaving the fundamental
-questions which motivated BSM physics unanswered.
 
- Secondly ATLAS and CMS discovered\cite{} a light Higgs of $125$ GeV,
- within the mass range that could be accommodated in the MSSM but
- requiring stops which are significantly heavier than both the direct
- collider limits and indirect limits that appears in constrained
- models from the significantly higher limits on first and second
- generation squarks.  Alternatively it is possible that a $125$ GeV
- Higgs in non-minimal models may not require such heavy stops, indeed
- a number of such models have been constructed to do exactly this by
- having new tree level contributions to the Higgs mass.
+Recent experimental developments have also increased the relevancy of
+such a tool. From the recent $7$ TeV and $8$ TeV runs at the Large
+Hadron Collider (LHC) there have been two important developments.
+First low energy signatures expected from such models, such as the
+classic jets plus missing transverse energy signature, have not been
+observed, substantially raising the lower limit on sparticle masses
+(see e.g.~\cite{Aad:2013wta,Chatrchyan:2014lfa}). No other signature
+of beyond the standard model(BSM) physics has been observed, leaving
+the fundamental questions which motivated BSM physics unanswered.
 
-These results lead to a number of different perspectives, for example
-some may wish to abandon naturalness as a motivation and focus on BSM
-models which can fit the observed relic density and allow unification
-of gauge couplings, while others may focus on special models which
-preserve naturalness.  In both cases exploration of such models can be
-aided if it is possible to quickly create a fast spectrum generator.
+ Secondly ATLAS and CMS discovered\cite{ATLAS:2012ae,
+   Chatrchyan:2012tx} a light Higgs of $125$ GeV, within the mass
+ range that could be accommodated in the MSSM but requiring stops
+ which are significantly heavier than both the direct collider limits
+ and indirect limits that appears in constrained models from the
+ significantly higher limits on first and second generation squarks.
+ Alternatively it is possible that a $125$ GeV Higgs in non-minimal
+ models may not require such heavy stops, indeed a number of such
+ models have been constructed to do exactly this by having new tree
+ level contributions to the Higgs mass.
 
+These motivate both exploring non-minimal SUSY models which ameliorate
+the naturaless problems introduced, by, for example, raising the tree
+level Higgs mass, and models developed with a fresh persp[ective,
+  based on other considerations.  In both cases exploration of such
+  models can be aided if it is possible to quickly create a fast
+  spectrum generator.
+
+\fs is designed for precisely this task. \fs is a MATHEMATICA package
+which with the help of \sarah
+\cite{Staub:2010ty,Staub:2009bi,Staub:2010jh,Staub:2012pb,Staub:2013tta}
+creates a fast, modular C++ spectrum generator for a user specified
+SUSY model.  The generated code structure is designed to be as
+flexible as possible to accomodate different types of extensions and
+due to it's modular nature it is easy to modify, add new featuires to
+or combine with other programs.
 
 
 
 \subsection{The Program}
+\label{Sec:Program}
 \fs is a MATHEMATICA package designed to create a fast and easily
 adaptable spectrum generator in C++ for any SUSY model and some
 non-supersymmetric models {\color{red} can we?}.  \fs makes use of the
@@ -2022,6 +2034,37 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   [arXiv:0806.0330 [hep-ph]].
   %%CITATION = ARXIV:0806.0330;%%
   %26 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Aad:2013wta}
+\bibitem{Aad:2013wta} 
+  G.~Aad {\it et al.}  [ATLAS Collaboration],
+  %``Search for new phenomena in final states with large jet multiplicities and missing transverse momentum at sqrt(s)=8 TeV proton-proton collisions using the ATLAS experiment,''
+  JHEP {\bf 1310}, 130 (2013)
+  [arXiv:1308.1841 [hep-ex]].
+  %%CITATION = ARXIV:1308.1841;%%
+  %36 citations counted in INSPIRE as of 24 Apr 2014
+\bibitem{Chatrchyan:2014lfa}
+  S.~Chatrchyan {\it et al.}  [CMS Collaboration],
+  %``Search for new physics in the multijet and missing transverse momentum final state in proton-proton collisions at $\sqrt{s}$ = 8 TeV,''
+  arXiv:1402.4770 [hep-ex].
+  %%CITATION = ARXIV:1402.4770;%%
+  %10 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{ATLAS:2012ae}
+\bibitem{ATLAS:2012ae} 
+  G.~Aad {\it et al.}  [ATLAS Collaboration],
+  %``Combined search for the Standard Model Higgs boson using up to 4.9 fb$^{-1}$ of $pp$ collision data at $\sqrt{s}=7$ TeV with the ATLAS detector at the LHC,''
+  Phys.\ Lett.\ B {\bf 710}, 49 (2012)
+  [arXiv:1202.1408 [hep-ex]].
+  %%CITATION = ARXIV:1202.1408;%%
+  %474 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Chatrchyan:2012tx}
+\bibitem{Chatrchyan:2012tx} 
+  S.~Chatrchyan {\it et al.}  [CMS Collaboration],
+  %``Combined results of searches for the standard model Higgs boson in $pp$ collisions at $\sqrt{s}=7$ TeV,''
+  Phys.\ Lett.\ B {\bf 710}, 26 (2012)
+  [arXiv:1202.1488 [hep-ex]].
+  %%CITATION = ARXIV:1202.1488;%%
+  %592 citations counted in INSPIRE as of 24 Apr 2014
+%\cite{Chatrchyan:2014lfa}
 \bibitem{Staub:2010ty} 
   F.~Staub, W.~Porod and B.~Herrmann,
   %``The Electroweak sector of the NMSSM at the one-loop level,''
