--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -140,7 +140,7 @@ Higgs
 \newpage
 \section{Introduction}
 Supersymmetry(SUSY) provides the only non-trivial way to extend the
-space-time symmetries of the poincar\'e
+space-time symmetries of the Poincar\'e
 group\cite{Coleman:1967ad,Haag:1974qh}, leading many to suspect that
 SUSY may be realised in nature in some form. In particular
 supersymmetric extensions of the standard model where SUSY is broken
@@ -160,24 +160,23 @@ Detailed phenomenological studies have been carried out for scenarios
 within the minimal supersymmetric standard model (MSSM).  Such work
 has been greatly aided by public spectrum generators for
 MSSM\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae},
-allowing fast and reliable exploration of the sparticle spectrum and
-mixings that can be obtained from particular choices of breaking
-mechanism inspired boundary conditions and specified parameters. There
-are also two public spectrum generators
-\cite{Ellwanger:2006rn,Allanach:2013kza} for the next to minimal
-supersymmetric standard model (NMSSM) \cite{NMSSM} .
+allowing fast and reliable exploration of the sparticle spectrum,
+mixings and couplings, which can be obtained from particular choices
+of breaking mechanism inspired boundary conditions and specified
+parameters. Beyond the MSSM there are also two public spectrum
+generators \cite{Ellwanger:2006rn,Allanach:2013kza} for the next to
+minimal supersymmetric standard model (NMSSM) \cite{NMSSM}.
 
 None of the fundamental motivations of supersymmetry require
 minimality, and specific alternatives to (or extensions of) the MSSM
-are motivated by, for example,the $\mu-problem$ of the
-MSSM\cite{Kim:1983dt}, explaining the family structure (see e.g,
+are, for example, motivated by the $\mu$-problem of the
+MSSM \cite{Kim:1983dt}; explaining the family structure (see e.g,
 \cite{King:2014nza}) or for successful baryogensis or leptogenesis
 (see e.g,\cite{King:2008qb}). However constructing specialised tools
 to study all relevant models would require an enormous amount of work.
 So general tools which can automate this process and produce fast and
 reliable programs can greatly enhance our ability to understand and
 test non-minimal realisations of supersymmetry.
-
 
 Recent experimental developments have also increased the relevancy of
 such a tool. From the recent $7$ TeV and $8$ TeV runs at the Large
@@ -187,18 +186,13 @@ classic jets plus missing transverse energy signature, have not been
 observed, substantially raising the lower limit on sparticle masses
 (see e.g.~\cite{Aad:2013wta,Chatrchyan:2014lfa}). No other signature
 of beyond the standard model(BSM) physics has been observed, leaving
-the fundamental questions which motivated BSM physics unanswered.
-
- Secondly ATLAS and CMS discovered\cite{ATLAS:2012ae,
-   Chatrchyan:2012tx} a light Higgs of $125$ GeV, within the mass
- range that could be accommodated in the MSSM but requiring stops
- which are significantly heavier than both the direct collider limits
- and indirect limits that appears in constrained models from the
- significantly higher limits on first and second generation squarks.
- Alternatively it is possible that a $125$ GeV Higgs in non-minimal
- models may not require such heavy stops, indeed a number of such
- models have been constructed to do exactly this by having new tree
- level contributions to the Higgs mass.
+the fundamental questions which motivated BSM physics
+unanswered. Secondly ATLAS and CMS discovered\cite{ATLAS:2012ae,
+  Chatrchyan:2012tx} a light Higgs of $125$ GeV, within the mass range
+that could be accommodated in the MSSM but requiring stops which are
+significantly heavier than both the direct collider limits and
+indirect limits that appears in constrained models from the
+significantly higher limits on first and second generation squarks.
 
 These motivate both exploring non-minimal SUSY models which ameliorate
 the naturalness problems introduced, by, for example, raising the tree
@@ -1369,7 +1363,7 @@ can be added very easily by...
 \subsection{Combing with  modules of your own code}
 
 \section{Run-time comparison with other spectrum generators}
-\label{Sec:comaprison}
+\label{Sec:comparison}
 We compare the run-time of the four different spectrum generators
 FlexibleSUSY (version 0.5.4), Softsusy (version 3.4.0), SPheno
 (3.2.4), SPhenoMSSM (generated with SARAH 4.1.0 and linked against
