Fixed names to be in one line, as opposed to split style copied from old softsusy.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -70,14 +70,14 @@ bookmarks=true, linktocpage]{hyperref}
 
  \title{\Large\bf FlexibleSUSY --- A spectrum generator generator for supersymmetric models}
 
-\author{Peter Athron}
-\address{ARC Centre of Excellence for Particle Physics at 
+\author[adelaide]{Peter Athron}
+\author[dresden]{Jae-hyeon Park}
+\author[dresden]{Dominik St\"ockinger}
+\author[dresden]{Alexander Voigt}
+\address[adelaide]{ARC Centre of Excellence for Particle Physics at 
 the Tera-scale, School of Chemistry and Physics, University of Adelaide, 
 Adelaide SA 5005 Australia}
-\author{Jae-hyeon Park}
-\author{Dominik St\"ockinger}
-\author{Alexander Voigt}
-\address{Institut f\"ur Kern- und Teilchenphysik,
+\address[dresden]{Institut f\"ur Kern- und Teilchenphysik,
 TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
    
   \begin{abstract}
