--- a/todo
+++ b/todo
@@ -8,7 +8,7 @@ Model:     MSSM
 free pars: m0, M12, TanBeta, Azero, SignMu
 EWSB:      Mu, BMu
 
-Model:     NMSSM
+Model:     NMSSM (Z3 invariant)
 free pars: m0, M12, TanBeta, Azero, LambdaInput
 EWSB:      \[Kappa], vS, ms2
 
@@ -17,8 +17,8 @@ free pars: m0, M12, TanBeta, Azero, LambdaInput, vSInput
 EWSB:      mHd2, mHu2, ms2
 Todo:      make vS EWSB output?
 
-Model:     E6SSM
+Model:     phdE6SSM
 free pars: m0, M12, TanBeta, Azero, LambdaInput, vSInput, KappaInput,
-           muPrimeInput, BmuPrimeInput, Lambda12Input
+           muPrimeInput, BmuPrimeInput
 EWSB:      mHd2, mHu2, ms2
 Todo:      make vS EWSB output?
