--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,8 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Enable source code export without the meta code via `make
    install-src'.
 
+ * Add FFLite module as a thread-safe alternative to LoopTools
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
