--- a/ChangeLog
+++ b/ChangeLog
@@ -51,6 +51,8 @@ FlexibleSUSY-0.5.4 [not released yet]
 
  * Add FFLite module as a thread-safe alternative to LoopTools
 
+ * Create helper function to find the LSP.
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
