--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1395,15 +1395,25 @@ can be added very easily by...
 
 \section{Run-time comparison with other spectrum generators}
 \label{Sec:comparison}
-We compare the run-time of the four different spectrum generators
-FlexibleSUSY (version 0.5.4), Softsusy (version 3.4.0), SPheno
-(3.2.4), SPhenoMSSM (generated with SARAH 4.1.0 and linked against
-SPheno 3.2.4).  FlexibleSUSY and Softsusy were compiled with g++ 4.8.0
-and Intel ifort 13.1.3 20130607.  SPheno and SPhenoMSSM were compiled
-with Intel ifort 13.1.3 20130607\footnote{We are using Intel's ifort
-  compiler, instead of gfortran, because it decreases the run-time of
-  SPheno and SPhenoMSSM by approximately a factor $1.5$.}.  We're
-generating random CMSSM parameter points with $m_0\in [50,1000]$
+We compare the run-time of five different CMSSM spectrum generators:
+%
+\begin{itemize}
+\item FlexibleSUSY-FV (version 1.0.0), which is based on SARAH's MSSM
+  model file that allows flavour violation,
+\item FlexibleSUSY-NoFV (version 1.0.0), without flavour violation
+\item Softsusy (version 3.4.0), without flavour violation
+\item SPheno (3.2.4), without flavour violation
+\item SPhenoMSSM (generated with SARAH 4.1.0 and linked against SPheno
+  3.2.4), which uses SARAH's MSSM model file that includes flavour
+  violation.
+\end{itemize}
+%
+FlexibleSUSY and Softsusy were compiled with g++ 4.8.0 and Intel ifort
+13.1.3 20130607.  SPheno and SPhenoMSSM were compiled with Intel ifort
+13.1.3 20130607\footnote{We are using Intel's ifort compiler, instead
+  of gfortran, because it decreases the run-time of SPheno and
+  SPhenoMSSM by approximately a factor $1.5$.}.  We're generating
+$2\cot 10^{4}$ random CMSSM parameter points with $m_0\in [50,1000]$
 $m_{1/2}\in [50,1000]$, $\tan\beta\in [1,100]$, $\sign\mu\in
 \{-1,+1\}$ and $A_0\in [-1000,1000]$.  The following SLHA template
 file was used:
@@ -1470,11 +1480,11 @@ Block MINPAR
 The SLHA file was passed to each spectrum generator and the
 (wall-clock) time was measured until the program has finished.  The
 average run-times for three different CPU types can be found in
-\tablename~\ref{tab:run-time-comparison}.  The first row shows the
+\tablename~\ref{tab:run-time-comparison}.  The first column shows the
 run-time on a Intel Core2 Duo (P8600) where only one core was enabled.
-The second row shows the run-time on a Intel Core2 Duo (P8600) where
-both cores were enabled.  In the third row a Intel Xeon (L5640) was
-used, which has $6$ CPU cores.
+The second column shows the run-time on a Intel Core2 Duo (P8600)
+where both cores were enabled.  In the third column a Intel Xeon
+(L5640) was used, which has $6$ CPU cores.
 %
 \begin{table}[tbh]
   \centering
@@ -1483,28 +1493,28 @@ used, which has $6$ CPU cores.
                           & Intel Core2 Duo (P8600)    & Intel Core2 Duo (P8600)     & Intel Xeon (L5640)\\
                           & (1 core, $2.40\unit{GHz}$) & (2 cores, $2.40\unit{GHz}$) & (6 cores, $2.27\unit{GHz}$)\\
     \midrule
-    FlexibleSUSY 0.5.4    & $0.151\unit{s}$    & $0.114\unit{s}$   & $0.091\unit{s}$\\
-    Softsusy 3.4.0        & $0.174\unit{s}$    & $0.169\unit{s}$   & $0.162\unit{s}$\\
-    SPheno 3.2.4          & $0.119\unit{s}$    & $0.115\unit{s}$   & $0.108\unit{s}$\\
-    SPhenoMSSM 4.1.0${}^*$ & $0.416\unit{s}$    & $0.401\unit{s}$   & $0.366\unit{s}$\\
+    FlexibleSUSY-NoFV 0.5.4 & $0.086\unit{s}$    & $0.079\unit{s}$   & $0.060\unit{s}$\\
+    SPheno 3.2.4            & $0.119\unit{s}$    & $0.114\unit{s}$   & $0.101\unit{s}$\\
+    Softsusy 3.4.0          & $0.175\unit{s}$    & $0.171\unit{s}$   & $0.147\unit{s}$\\
+    \midrule
+    FlexibleSUSY-FV 0.5.4   & $0.150\unit{s}$    & $0.113\unit{s}$   & $0.074\unit{s}$\\
+    SPhenoMSSM 4.1.0${}^*$  & $0.415\unit{s}$    & $0.401\unit{s}$   & $0.370\unit{s}$\\
     \bottomrule
   \end{tabular}
-  \caption{Average run-time for random CMSSM parameter points.
-    FlexibleSUSY and Softsusy were compiled
-    with g++ 4.8.0 and ifort 13.1.3 20130607.
-    SPheno, SPhenoMSSM were
-    compiled with ifort 13.1.3 20130607.
-    ${}^*$SPhenoMSSM was generated with SARAH 4.1.0 and linked
-    against SPheno 3.2.4.}
+  \caption{Average run-time of CMSSM spectrum generators for
+    for random parameter points.  The upper }
   \label{tab:run-time-comparison}
 \end{table}
-%
-We find that on the single-core machine SPheno is fastest with
-$0.119\unit{s}$, and FlexibleSUSY is second with $0.151\unit{s}$.  In
-the case of 2 or 6 CPU cores, FlexibleSUSY is fastest with
-$0.114\unit{s}$ and $0.091\unit{s}$, respectively.  The reason is that
-FlexibleSUSY calculates each pole mass in a separate thread, and
-therefore benefits from multi-core CPUs.
+
+Under both the non-flavor violating spectrum generators
+FlexibleSUSY-NoFV, Softsusy and SPheno (first three rows) as well as
+the flavor violating ones FlexibleSUSY-NoFV and SPhenoMSSM (4th and
+5th row) we find that \fs is significantly fastest.  We also find that
+increasing the number of CPU cores reduces the run-time of \fs.  The
+reason is that \fs calculates each pole mass in a separate thread, and
+therefore benefits from multi-core CPUs.  Under the hand-written CMSSM
+spectrum generators SPheno and Softsusy we find that SPheno is fastest
+on average.
 
 \appendix
 \section{Examples}
